force-app/main/default/objects/Investment_Committee_Member__c/Investment_Committee_Member__c.object-meta.xml
<CustomObject>
    <description>List all the investment committee members and their status (whether they are still active). 

For each Investment Committee Meeting users can assign Investment Committee Members to the meeting in order to track who was present in which meeting</description>
    <label>Investment Committee Member</label>
    <nameField>
        <displayFormat>ICM-{00000000}</displayFormat>
        <label>Investment Committee Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Committee Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>