force-app/main/default/objects/Investment_Committee_Member__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>The date the Investment Committee Member left the committee</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>