force-app/main/default/objects/Investment_Committee_Member__c/fields/Investment_Committee__c.field-meta.xml
<CustomField>
    <fullName>Investment_Committee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Investment Committee that the Investment Committee is a member of</description>
    <label>Investment Committee</label>
    <referenceTo>Investment_Committee__c</referenceTo>
    <relationshipLabel>Investment Committee Members</relationshipLabel>
    <relationshipName>Investment_Committee_Members</relationshipName>
    <type>Lookup</type>
</CustomField>