force-app/main/default/objects/Investment_Committee_Member__c/fields/Investment_Committee_Member__c.field-meta.xml
<CustomField>
    <fullName>Investment_Committee_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact lookup</description>
    <label>Investment Committee Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investment Committee Members</relationshipLabel>
    <relationshipName>Investment_Committee_Members</relationshipName>
    <type>Lookup</type>
</CustomField>