force-app/main/default/objects/Investment_Committee_Member__c/fields/Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date__c</fullName>
    <description>The date the Investment Committee Member joined the committee</description>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>